<resources>
    <string name="shopping_app_name">Shopping</string>

    <string name="shopping_pk_invite_tip">Accept the inviting or not?</string>

    <string name="shopping_product_detail_buy_now">Buy Now</string>
    <string name="shopping_product_promote_title">抢 9 期免息券</string>
    <string name="shopping_product_promote_date">6.11 - 6.18</string>
    <string name="shopping_product_promote_actual_price_title">到手价</string>
    <string name="shopping_product_promote_actual_price">6599</string>

    <string name="shopping_product_default_description">Apple iPad Pro 11英寸平板电脑 2020年新款(256G WLAN版/全面屏/A12Z/FaceID/MXDC2CH/A) 深空灰色</string>

    <string name="shopping_product_name_1">Lipstick</string>
    <string name="shopping_product_name_2">Rucksack</string>
    <string name="shopping_product_name_3">iPad</string>
    <string name="shopping_product_name_4">Pants</string>

    <string name="shopping_product_desp_1">Revlon Super Lustrous Lipstick, High Impact Lipcolor</string>
    <string name="shopping_product_desp_2">Keepall 55 Monogram Eclipse Canvas M40605</string>
    <string name="shopping_product_desp_3">New Apple iPad Pro (12.9-inch, Wi-Fi, 128GB) - Silver </string>
    <string name="shopping_product_desp_4">Men\'s K87 Workwear Pocket Short Sleeve T-Shirt </string>

    <string name="shopping_product_list_title">Product List</string>
    <string name="shopping_product_type_unlisted_title">Retired</string>
    <string name="shopping_product_type_listed_title">Launched</string>
    <string name="shopping__product_price_format" translatable="false">￥ %d</string>
    <string name="shopping__product_action_detail">Detail</string>
    <string name="shopping__product_action_list">Launch</string>
    <string name="shopping__product_action_unlisted">Retire</string>
</resources>