<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="108dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shopping_product_item_background"
    android:padding="4dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_icon"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        tools:src="@drawable/shopping_icon_product_1"
        android:layout_marginEnd="12dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_toEndOf="@id/iv_icon"
        tools:text="@string/shopping_product_desp_1"
        android:textColor="@android:color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_below="@id/tv_description"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/iv_icon"
        android:gravity="center_vertical"
        android:textAlignment="gravity"
        tools:text="@string/shopping__product_price_format"
        android:textColor="#FF007D" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_action"
        android:layout_width="68dp"
        android:layout_height="38dp"
        android:layout_below="@id/tv_description"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shopping_product_item_btn_bg"
        android:gravity="center"
        tools:text="@string/shopping__product_action_unlisted"
        android:textAlignment="gravity"
        android:textColor="#00AFF4" />

</RelativeLayout>